--- a/TEMPLATE/Views/EmployeAssociation/Create.cshtml
+++ b/TEMPLATE/Views/EmployeAssociation/Create.cshtml
@@ -1,4 +1,6 @@
-﻿@model TEMPLATE.Models.employe_association
+﻿
+
+@model TEMPLATE.Models.employe_association
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
